--- a/cloud-storage-client/src/main/resources/com/geekbrains/io/chat.fxml
+++ b/cloud-storage-client/src/main/resources/com/geekbrains/io/chat.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="538.0" prefWidth="344.0" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.geekbrains.io.StorageController">
-    <ListView onMouseClicked="#moveToTextField" fx:id="listView" layoutX="16.0" layoutY="14.0" prefHeight="475.0" prefWidth="312.0"/>
-    <TextField onAction="#send" fx:id="input" layoutX="16.0" layoutY="489.0" prefHeight="36.0" prefWidth="312.0"/>
+<AnchorPane prefHeight="538.0" prefWidth="672.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.geekbrains.io.StorageController">
+    <ListView fx:id="listView" layoutX="16.0" layoutY="14.0" prefHeight="475.0" prefWidth="312.0" />
+    <TextField fx:id="input" layoutX="16.0" layoutY="489.0" onAction="#send" prefHeight="36.0" prefWidth="312.0" />
+    <ListView fx:id="serverListView" layoutX="345.0" layoutY="14.0" prefHeight="475.0" prefWidth="312.0" />
+    <Label fx:id="label" layoutX="345.0" layoutY="489.0" prefHeight="36.0" prefWidth="312.0" />
 </AnchorPane>
