--- a/cloud-storage-client/src/main/resources/com/geekbrains/io/storageWindow.fxml
+++ b/cloud-storage-client/src/main/resources/com/geekbrains/io/storageWindow.fxml
@@ -6,11 +6,12 @@
 <AnchorPane prefHeight="488.0" prefWidth="672.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.geekbrains.io.StorageController">
     <ListView fx:id="listView" layoutX="16.0" layoutY="14.0" onMouseClicked="#listClientClick" prefHeight="349.0" prefWidth="312.0" />
     <ListView fx:id="serverListView" layoutX="345.0" layoutY="14.0" onMouseClicked="#listServerClick" prefHeight="349.0" prefWidth="312.0" />
-   <Button fx:id="upload" layoutX="88.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#doUpload" text="Загрузить" />
-   <Button fx:id="download" layoutX="513.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#doDownload" prefHeight="25.0" prefWidth="85.0" text="Скачать" />
-   <Button fx:id="refreshBtn" layoutX="301.0" layoutY="414.0" mnemonicParsing="false" onMouseClicked="#doRefresh" text="Обновить" />
-   <Button layoutX="295.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#doCDUp" prefHeight="25.0" prefWidth="85.0" text="Вверх" />
-   <Button layoutX="294.0" layoutY="449.0" mnemonicParsing="false" onMouseClicked="#doDelete" prefHeight="25.0" prefWidth="85.0" text="Удалить" />
-   <Button fx:id="renameBtn" layoutX="172.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#openChangeNameWindow" prefHeight="25.0" prefWidth="107.0" text="Переименовать" />
-   <Button fx:id="createBtn" layoutX="393.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#createFile" prefHeight="25.0" prefWidth="107.0" text="Создать файл" />
+   <Button fx:id="upload" layoutX="59.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#doUpload" prefHeight="25.0" prefWidth="107.0" text="Загрузить" />
+   <Button fx:id="download" layoutX="507.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#doDownload" prefHeight="25.0" prefWidth="107.0" text="Скачать" />
+   <Button fx:id="refreshBtn" layoutX="301.0" layoutY="443.0" mnemonicParsing="false" onMouseClicked="#doRefresh" text="Обновить" />
+   <Button fx:id="upBtn" layoutX="283.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#doCDUp" prefHeight="25.0" prefWidth="107.0" text="Вверх" />
+   <Button fx:id="deleteBtn" layoutX="394.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#doDelete" prefHeight="25.0" prefWidth="107.0" text="Удалить" />
+   <Button fx:id="renameBtn" layoutX="172.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#renameFile" prefHeight="25.0" prefWidth="107.0" text="Переименовать" />
+   <Button fx:id="createBtn" layoutX="212.0" layoutY="410.0" mnemonicParsing="false" onMouseClicked="#createFile" prefHeight="25.0" prefWidth="118.0" text="Создать файл" />
+   <Button fx:id="createDirBtn" layoutX="343.0" layoutY="410.0" mnemonicParsing="false" onMouseClicked="#createDir" prefHeight="25.0" prefWidth="118.0" text="Создать папку" />
 </AnchorPane>
